The version number is hardcoded into sdparm.c (in a C string);
the rpm spec file: sdparm.spec ; the debian/changelog file;
and the configure.ac file (in the AC_INIT item).

ChangeLog for sdparm-1.11 [20180405] [svn: r311]
  - add Out of band management control mpage (spl5r01)
  - accept additional tansport acronyms (e.g. ib for srp)
  - power condition mpage: rename fields IDLE->IDLE_A;
    STANDBY->STANDBY_Z; ICT->IACT and SCT->SZCT
  - vpd: decode TransportIDs in SCSI port page
    - decode SCSI Feature sets page (spc5r16)
    - decode Enclosure service device characteristics
      page (T10/17-142r1 --> ses4r02 ??)
    - extended inquiry data, sync with spc5r09 + sbc4r11
    - 3 party copy page improvements
    - block limits and block limit extension VPD pages:
      add extra info about corner cases
    - add maximum inquiry|mode_page change logs fields
      to extended inquiry vpd page (spc5r17)
    - fully implement Device constituents VPD page
  - command=capacity with --long force read capacity(16)
    with full reporting of response
  - --wscan option: expand bus type to include NVMe
  - point svn:externals to rev 767 of sg3_utils
  - convert many two valued 'int's to bool
  - shellcheck corrections on scripts
  - upgrade automake to version 1.15 (U16.04)
  - rework configure.ac and src/Makefile.am
  - update BSD license from 3 to 2 clause aka FreeBSD
    license (without reference to FreeBSD project)
  - debian: bump compat file contents from 7 to 10

ChangeLog for sdparm-1.10 [20160222] [svn: r279]
  - add --inhex=FN option for decoding without device present,
    FN is interpreted as response to mode sense(10) command
  - add --raw option to interpret FN as binary (def: ASCII hex)
  - add --pdt=PDT option for use with --inhex=FN
  - --quiet used twice hides changeable, default + saved
  - add IO advice hints grouping mode page (sbc4r06, 8)
  - add Unit serial number VPD page specific sanity check